--- a/gem/cuda/.rubocop.yml
+++ b/gem/cuda/.rubocop.yml
@@ -6,13 +6,23 @@ AllCops:
   TargetRubyVersion: 2.6
   NewCops: enable
 
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
+# Layout/LineLength:
+#   Max: 120
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
 
 Layout/LineLength:
-  Max: 120
+  Enabled: false
