--- a/gem/cuda/Gemfile
+++ b/gem/cuda/Gemfile
@@ -1,11 +1,11 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
 # Specify your gem's dependencies in cuda.gemspec
 gemspec
 
-gem "rake", "~> 13.0"
+gem 'rake', '~> 13.0'
 
-gem "minitest", "~> 5.0"
-gem "minitest-debugger"
+gem 'minitest', '~> 5.0'
+gem 'minitest-debugger'
