--- a/gem/cuda/Gemfile
+++ b/gem/cuda/Gemfile
@@ -5,8 +5,13 @@ source 'https://rubygems.org'
 # Specify your gem's dependencies in cuda.gemspec
 gemspec
 
+gem 'byebug'
 gem 'rake', '~> 13.0'
 
+gem 'rubocop', '~> 1.21'
+gem 'rubocop-minitest', require: false
+gem 'rubocop-rake', require: false
+
 gem 'minitest', '~> 5.0'
-gem 'minitest-debugger'
+gem 'minitest-byebug'
 gem 'minitest-hooks'
