--- a/gem/cuda/Gemfile
+++ b/gem/cuda/Gemfile
@@ -10,6 +10,7 @@ gem 'rake', '~> 13.0'
 
 gem 'rubocop', '~> 1.21'
 gem 'rubocop-minitest', require: false
+gem 'rubocop-performance', require: false
 gem 'rubocop-rake', require: false
 
 gem 'minitest', '~> 5.0'
